--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://l-dmitry94.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://l-dmitry94.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
